--- a/index.html
+++ b/index.html
@@ -541,6 +541,10 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Trusted CI's TTP Program,
+  Trusted CI TTP Workshop,
+  September 14, 2023.
+  <a href="202309-trustedci-ttp.pdf">[slides]</a>
 <li>The Trusted CI Framework for Cybersecurity Programs,
   MS-CC All Hands Meeting,
   August 24, 2023.
