--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@ July 22, 2001.
   NSF Research Infrastructure Workshop,
   June 29, 2023.
   <a href="20230629-trustedci-basney-riw.pdf">[slides]</a>
+  <a href="https://youtu.be/p9dOhznOFpI">[video]</a>
 <li>A Brief Introduction to Trusted CI,
   MS-CC Annual meeting,
   May 11, 2023.
