--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@ GitHub: <a href="https://github.com/jbasney/">jbasney</a><br>
 ORCID: <a href="https://orcid.org/0000-0002-0139-0640">https://orcid.org/0000-0002-0139-0640</a><br>
 <h2 id="projects">Current Projects</h2>
 <UL>
-<li><a href="https://operations.access-ci.org/">ACCESS Operations</a>
 <li><a href="https://www.cilogon.org/">CILogon</a>
 <li><a href="https://cybershuttle.org/">Cybershuttle</a>
 <li><a href="https://sciauth.org/">SciAuth</a>
@@ -541,6 +540,14 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Trusted CI Welcome,
+  NSF Cybersecurity Summit,
+  October 24, 2023.
+  <a href="https://youtu.be/9FeT16ppWos?si=_LxkjFKX_npPk6re">[video]</a>
+<li>Ransomware,
+  MS-CC Cybersecurity Community of Practice,
+  October 10, 2023.
+  <a href="20231010-ms-cc-ransomware.pdf">[slides]</a>
 <li>Trusted CI's TTP Program,
   Trusted CI TTP Workshop,
   September 14, 2023.
