--- a/index.html
+++ b/index.html
@@ -543,6 +543,7 @@ July 22, 2001.
 <li>Trusted CI Welcome,
   NSF Cybersecurity Summit,
   October 24, 2023.
+  <a href="2023-summit-trustedci-welcome.pdf">[slides]</a>
   <a href="https://youtu.be/9FeT16ppWos?si=_LxkjFKX_npPk6re">[video]</a>
 <li>Ransomware,
   MS-CC Cybersecurity Community of Practice,
