--- a/index.html
+++ b/index.html
@@ -1334,5 +1334,5 @@ Source: National Science Foundation award number
   Grid 2007, SC07, SECOVAL 2007, MGC 2007, AINA 2008,
   CCGrid 2008, IDtrust 2008, 2008 IEEE TCSC Doctoral Symposium,
   SC08, Grid 2008, MGC 2008, CCGrid 2009, MGC 2009, SC10, Grid 2010, MGC 2010, HPDC 2011, MGC 2011,
-  SC12, XSEDE13, SC13, SC14, XSEDE14, CCGrid 2015, XSEDE15, XSEDE16, PEARC17, ISGC 2020, PEARC20, ISGC 2022, ISGC 2023
+  SC12, XSEDE13, SC13, SC14, XSEDE14, CCGrid 2015, XSEDE15, XSEDE16, PEARC17, ISGC 2020, PEARC20, ISGC 2022, ISGC 2023, ISGC 2024
 </ul>
