--- a/index.html
+++ b/index.html
@@ -540,6 +540,10 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>A Brief Update from Trusted CI,
+  CI4MF,
+  January 17, 2024.
+  <a href="202401-basney-trustedci.pdf">[slides]</a>
 <li>Trusted CI Welcome,
   NSF Cybersecurity Summit,
   October 24, 2023.
