--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@ ORCID: <a href="https://orcid.org/0000-0002-0139-0640">https://orcid.org/0000-00
 <p>
 Please contact me for a free copy of any publication listed below.
 <ul>
+<li>M. J. H. Faruk, J. Basney and J. Q. Cheng, 
+  "Blockchain-Based Decentralized Verifiable Credentials: Leveraging Smart Contracts for Privacy-Preserving 
+  Authentication Mechanisms to Enhance Data Security in Scientific Data Access," 2023 IEEE International 
+  Conference on Big Data (BigData), Sorrento, Italy, 2023, pp. 5493-5502, doi: 10.1109/BigData59044.2023.10386360.
+  <a href="https://doi.org/mdnq">https://doi.org/mdnq</a>
 <li>Md Jobair Hossain Faruk, Bilash Saha, and Jim Basney. 2023. A Comparative Analysis Between SciTokens,
   Verifiable Credentials, and Smart Contracts: Novel Approaches for Authentication and Secure Access to
   Scientific Data. In Practice and Experience in Advanced Research Computing (PEARC ’23), July 23–27, 2023,
