--- a/index.html
+++ b/index.html
@@ -545,6 +545,10 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Outcomes of the Trusted CI Cybersecurity Framework HPC Cohort,
+  4th High-Performance Computing Security Workshop,
+  May 21, 2024.
+  <a href="202405-trustedci-delta-hpc-security.pdf">[slides]</a>
 <li>A Brief Update from Trusted CI,
   CI4MF,
   January 17, 2024.
