--- a/index.html
+++ b/index.html
@@ -545,6 +545,11 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>JSON Web Tokens for Science, 
+  Trusted CI Webinar,
+  August 26, 2024. 
+  <a href="https://hdl.handle.net/2142/124057">[slides]</a> 
+  <a href="https://youtu.be/9DOIIjwVLSA">[video]</a>
 <li>Outcomes of the Trusted CI Cybersecurity Framework HPC Cohort,
   4th High-Performance Computing Security Workshop,
   May 21, 2024.
