--- a/index.html
+++ b/index.html
@@ -545,6 +545,9 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Supporting Science at Scale: CILogon Hosted COmanage for ACCESS,
+  Internet2 Technology Exchange,
+  December 11, 2024.
 <li>JSON Web Tokens for Science, 
   Trusted CI Webinar,
   August 26, 2024. 
