--- a/index.html
+++ b/index.html
@@ -1217,6 +1217,12 @@ See also:
 <a href="https://www.nsf.gov/awardsearch/advancedSearchResult?PIFirstName=James&PILastName=Basney&IncludeCoPI=true&ActiveAwards=true&ExpiredAwards=true">NSF
 Award Search</a>
 <ul>
+<li>PI: Sean Peisert,
+  Co-PIs: Kelli Shute, Carolyn Ellis, James Marsteller, James Basney.
+  Title: Trusted CI, The NSF Cybersecurity Center of Excellence.
+  Duration: October 2024 to September 2029.
+  Amount: $29,920,722.
+  Source: National Science Foundation Interagency Agreement #A2407-049-089-064206.0.
 <li>PI: Phuong Cao, 
   Co-PIs: Ravishankar Iyer, James Basney, Alexander Withers.
   Title: FMitF: Track II: Bringing Verification-Aware Languages and Federated Authentication to Enable Secure Computing for Scientific Communities.
