--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@ July 22, 2001.
 <li>Supporting Science at Scale: CILogon Hosted COmanage for ACCESS,
   Internet2 Technology Exchange,
   December 11, 2024.
+  <a href="20241211-cilogon-comanage-access-techex.pdf">[slides]</a>
 <li>JSON Web Tokens for Science, 
   Trusted CI Webinar,
   August 26, 2024. 
