--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Please contact me for a free copy of any publication listed below.
 <li>Andrew Adams, Kay Avila, Jim Basney, Dana Brunson, Robert Cowles,
   Jeannette Dopheide, Terry Fleury, Elisa Heymann, Florence Hudson,
   Craig Jackson, Ryan Kiser, Mark Krenz, Jim Marsteller, Barton
-  P. Miller, Sean Piesert, Scott Russell, Susan Sons, Von Welch, and
+  P. Miller, Sean Peisert, Scott Russell, Susan Sons, Von Welch, and
   John Zage. 2019. Trusted CI Experiences in Cybersecurity and Service
   to Open Science. In PEARC'19: Practice and Experience in Advanced
   Research Computing, July 28-August 1, 2019, Chicago, IL, USA. ACM,
