--- a/index.html
+++ b/index.html
@@ -546,6 +546,12 @@ July 22, 2001.
 <h2 id="talks">Presentations</h2>
 <ul>
 <li>Supporting Science at Scale: CILogon Hosted COmanage for ACCESS,
+  Georgia Tech Cyberinfrastructure and Services for Science &amp; Engineering Workshop,
+  May 7 2025.
+<li>JSON Web Tokens for Science,
+  DOE IRI TRUSTID Technical Subcommittee,
+  April 29, 2025.
+<li>Supporting Science at Scale: CILogon Hosted COmanage for ACCESS,
   Internet2 Technology Exchange,
   December 11, 2024.
   <a href="20241211-cilogon-comanage-access-techex.pdf">[slides]</a>
