--- a/index.html
+++ b/index.html
@@ -545,6 +545,9 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Our Current Vision for Trustworthy Long-Term CILogon Operations,
+  HTC25,
+  June 2, 2025.
 <li>Supporting Science at Scale: CILogon Hosted COmanage for ACCESS,
   Georgia Tech Cyberinfrastructure and Services for Science &amp; Engineering Workshop,
   May 7 2025.
