--- a/index.html
+++ b/index.html
@@ -548,6 +548,9 @@ July 22, 2001.
 <li>Our Current Vision for Trustworthy Long-Term CILogon Operations,
   HTC25,
   June 2, 2025.
+<li>Panel: Cybersecurity Resources and Tools for MS-CC Campuses and Preparing Students,
+  MS-CC Annual Meeting,
+  May 29, 2025.
 <li>Supporting Science at Scale: CILogon Hosted COmanage for ACCESS,
   Georgia Tech Cyberinfrastructure and Services for Science &amp; Engineering Workshop,
   May 7 2025.
