--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@ July 22, 2001.
 <li>Our Current Vision for Trustworthy Long-Term CILogon Operations,
   HTC25,
   June 2, 2025.
+  <a href="202506-basney-cilogon.pdf">[slides]</a>
 <li>Panel: Cybersecurity Resources and Tools for MS-CC Campuses and Preparing Students,
   MS-CC Annual Meeting,
   May 29, 2025.
