--- a/index.html
+++ b/index.html
@@ -545,6 +545,9 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>CILogon Overview,
+  UI System Computes Federated Access Subgroup,
+  June 6, 2025.
 <li>Our Current Vision for Trustworthy Long-Term CILogon Operations,
   HTC25,
   June 2, 2025.
