--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@ July 22, 2001.
   HTC25,
   June 2, 2025.
   <a href="202506-basney-cilogon.pdf">[slides]</a>
+  <a href="https://youtu.be/-kv6BvWXi6U">[video]</a>
 <li>Panel: Cybersecurity Resources and Tools for MS-CC Campuses and Preparing Students,
   MS-CC Annual Meeting,
   May 29, 2025.
