--- a/index.html
+++ b/index.html
@@ -1235,6 +1235,12 @@ See also:
 <a href="https://www.nsf.gov/awardsearch/advancedSearchResult?PIFirstName=James&PILastName=Basney&IncludeCoPI=true&ActiveAwards=true&ExpiredAwards=true">NSF
 Award Search</a>
 <ul>
+<li>PI: Suresh Marru,
+  Co-PIs: James Basney, Eroma Abeysinghe Mudalige, Lahiru Jayathilake, Dimuthu Wannipurage.
+  Title: POSE: Phase II: An Open-Source Ecosystem for End-to-End Security and Research Security Platforms.
+  Duration: September 2025 to August 2027.
+  Amount: $1,499,999.
+  Source: National Science Foundation award number <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2449423">2449423</a>.
 <li>PI: Sean Peisert,
   Co-PIs: Kelli Shute, Carolyn Ellis, James Marsteller, James Basney.
   Title: Trusted CI, The NSF Cybersecurity Center of Excellence.
