--- a/index.html
+++ b/index.html
@@ -543,6 +543,9 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>Panel: What's new with federated identity for science?
+  NSF Cybersecurity Summit,
+  October 21, 2025.
 <li>CILogon Overview,
   UI System Computes Federated Access Subgroup,
   June 6, 2025.
