--- a/index.html
+++ b/index.html
@@ -543,6 +543,9 @@ July 22, 2001.
 </ul>
 <h2 id="talks">Presentations</h2>
 <ul>
+<li>CILogon: supporting US research collaborations,
+  21st FIM4R Workshop,
+  December 7, 2025.
 <li>Panel: What's new with federated identity for science?
   NSF Cybersecurity Summit,
   October 21, 2025.
