--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@ July 22, 2001.
 <li>Panel: What's new with federated identity for science?
   NSF Cybersecurity Summit,
   October 21, 2025.
+  <a href="202511-NSF-Panel-Federated-Identity-for-Science.pdf">[slides]</a>
 <li>CILogon Overview,
   UI System Computes Federated Access Subgroup,
   June 6, 2025.
