--- a/index.html
+++ b/index.html
@@ -546,10 +546,12 @@ July 22, 2001.
 <li>CILogon: supporting US research collaborations,
   21st FIM4R Workshop,
   December 7, 2025.
+  <a href="202512-basney-cilogon.pdf">[slides]</a>
 <li>Panel: What's new with federated identity for science?
   NSF Cybersecurity Summit,
   October 21, 2025.
   <a href="202511-NSF-Panel-Federated-Identity-for-Science.pdf">[slides]</a>
+  <a href="https://youtu.be/-YS5CKkahD4">[video]</a>
 <li>CILogon Overview,
   UI System Computes Federated Access Subgroup,
   June 6, 2025.
